--- a/cohorts/homework2.ipynb
+++ b/cohorts/homework2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "03eae392",
    "metadata": {},
    "outputs": [],
@@ -141,98 +141,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "60f653ba",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b847ea6f2f13429b81aa76475a4f58cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 5 files:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-07-21 11:00:27.745\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36mfastembed.common.model_management\u001b[0m:\u001b[36mdownload_model\u001b[0m:\u001b[36m430\u001b[0m - \u001b[31m\u001b[1mCould not download model from HuggingFace: 403 Forbidden: None.\n",
+      "Cannot access content at: https://huggingface.co/api/models/xenova/jina-embeddings-v2-small-en.\n",
+      "Make sure your token has the correct permissions. Falling back to other sources.\u001b[0m\n",
+      "\u001b[32m2025-07-21 11:00:27.745\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36mfastembed.common.model_management\u001b[0m:\u001b[36mdownload_model\u001b[0m:\u001b[36m452\u001b[0m - \u001b[31m\u001b[1mCould not download model from either source, sleeping for 3.0 seconds, 2 retries left.\u001b[0m\n"
+     ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b3e578650bc475496bca1fbd50ecdf8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/367 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-07-21 11:00:30.751\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36mfastembed.common.model_management\u001b[0m:\u001b[36mdownload_model\u001b[0m:\u001b[36m430\u001b[0m - \u001b[31m\u001b[1mCould not download model from HuggingFace: 403 Forbidden: None.\n",
+      "Cannot access content at: https://huggingface.co/api/models/xenova/jina-embeddings-v2-small-en.\n",
+      "Make sure your token has the correct permissions. Falling back to other sources.\u001b[0m\n",
+      "\u001b[32m2025-07-21 11:00:30.752\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36mfastembed.common.model_management\u001b[0m:\u001b[36mdownload_model\u001b[0m:\u001b[36m452\u001b[0m - \u001b[31m\u001b[1mCould not download model from either source, sleeping for 9.0 seconds, 1 retries left.\u001b[0m\n",
+      "\u001b[32m2025-07-21 11:00:39.756\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36mfastembed.common.model_management\u001b[0m:\u001b[36mdownload_model\u001b[0m:\u001b[36m430\u001b[0m - \u001b[31m\u001b[1mCould not download model from HuggingFace: 403 Forbidden: None.\n",
+      "Cannot access content at: https://huggingface.co/api/models/xenova/jina-embeddings-v2-small-en.\n",
+      "Make sure your token has the correct permissions. Falling back to other sources.\u001b[0m\n",
+      "\u001b[32m2025-07-21 11:00:39.757\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36mfastembed.common.model_management\u001b[0m:\u001b[36mdownload_model\u001b[0m:\u001b[36m452\u001b[0m - \u001b[31m\u001b[1mCould not download model from either source, sleeping for 27.0 seconds, 0 retries left.\u001b[0m\n"
+     ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "900e89a44f2847a09a4ed53053f0bac2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "726f59392d364638bc446b784ed79995",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/125 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d78e598c79fa4f779e8e1e6f16deed97",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96d65117681d420e94f7624a42766643",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "onnx/model.onnx:   0%|          | 0.00/130M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ValueError",
+     "evalue": "Could not load model jinaai/jina-embeddings-v2-small-en from any source.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Load the Jina embedding model\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m model = \u001b[43mTextEmbedding\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mjinaai/jina-embeddings-v2-small-en\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtoken\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mhf_BHUaORZwHGJkcFngbyTLMCiKeZhriLlYHy\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Your input text\u001b[39;00m\n\u001b[32m      5\u001b[39m query1 = \u001b[33m'\u001b[39m\u001b[33mI just discovered the course. Can I join now?\u001b[39m\u001b[33m'\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/python/3.12.1/lib/python3.12/site-packages/fastembed/text/text_embedding.py:114\u001b[39m, in \u001b[36mTextEmbedding.__init__\u001b[39m\u001b[34m(self, model_name, cache_dir, threads, providers, cuda, device_ids, lazy_load, **kwargs)\u001b[39m\n\u001b[32m    112\u001b[39m     supported_models = EMBEDDING_MODEL_TYPE._list_supported_models()\n\u001b[32m    113\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(model_name.lower() == model.model.lower() \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m supported_models):\n\u001b[32m--> \u001b[39m\u001b[32m114\u001b[39m         \u001b[38;5;28mself\u001b[39m.model = \u001b[43mEMBEDDING_MODEL_TYPE\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    115\u001b[39m \u001b[43m            \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    116\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcache_dir\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcache_dir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    117\u001b[39m \u001b[43m            \u001b[49m\u001b[43mthreads\u001b[49m\u001b[43m=\u001b[49m\u001b[43mthreads\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    118\u001b[39m \u001b[43m            \u001b[49m\u001b[43mproviders\u001b[49m\u001b[43m=\u001b[49m\u001b[43mproviders\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    119\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcuda\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcuda\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    120\u001b[39m \u001b[43m            \u001b[49m\u001b[43mdevice_ids\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdevice_ids\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    121\u001b[39m \u001b[43m            \u001b[49m\u001b[43mlazy_load\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlazy_load\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    122\u001b[39m \u001b[43m            \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    123\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    124\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m    126\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    127\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mModel \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m is not supported in TextEmbedding. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    128\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mPlease check the supported models using `TextEmbedding.list_supported_models()`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    129\u001b[39m )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/python/3.12.1/lib/python3.12/site-packages/fastembed/text/onnx_embedding.py:251\u001b[39m, in \u001b[36mOnnxTextEmbedding.__init__\u001b[39m\u001b[34m(self, model_name, cache_dir, threads, providers, cuda, device_ids, lazy_load, device_id, specific_model_path, **kwargs)\u001b[39m\n\u001b[32m    249\u001b[39m \u001b[38;5;28mself\u001b[39m.cache_dir = \u001b[38;5;28mstr\u001b[39m(define_cache_dir(cache_dir))\n\u001b[32m    250\u001b[39m \u001b[38;5;28mself\u001b[39m._specific_model_path = specific_model_path\n\u001b[32m--> \u001b[39m\u001b[32m251\u001b[39m \u001b[38;5;28mself\u001b[39m._model_dir = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdownload_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    252\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmodel_description\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    253\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcache_dir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[43m    \u001b[49m\u001b[43mlocal_files_only\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_local_files_only\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    255\u001b[39m \u001b[43m    \u001b[49m\u001b[43mspecific_model_path\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_specific_model_path\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    256\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    258\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m.lazy_load:\n\u001b[32m    259\u001b[39m     \u001b[38;5;28mself\u001b[39m.load_onnx_model()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/python/3.12.1/lib/python3.12/site-packages/fastembed/common/model_management.py:458\u001b[39m, in \u001b[36mModelManagement.download_model\u001b[39m\u001b[34m(cls, model, cache_dir, retries, **kwargs)\u001b[39m\n\u001b[32m    455\u001b[39m     time.sleep(sleep)\n\u001b[32m    456\u001b[39m     sleep *= \u001b[32m3\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m458\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCould not load model \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel.model\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m from any source.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: Could not load model jinaai/jina-embeddings-v2-small-en from any source."
+     ]
     }
    ],
    "source": [
     "# Load the Jina embedding model\n",
-    "model = TextEmbedding(model_name=\"jinaai/jina-embeddings-v2-small-en\")\n",
+    "model = TextEmbedding(model_name=\"xenova/jina-embeddings-v2-small-en\")\n",
     "\n",
     "# Your input text\n",
     "query1 = 'I just discovered the course. Can I join now?'\n",
